# applause

./: Cargo.toml  README.md
examples/: README.md  attrs.rs  simple.rs  simple_with_args.rs
examples/chain/: foo.rs  main.rs
src/: lib.rs
src/proc-macros/: Cargo.toml  clap_args.rs  lib.rs
