[package]
name = "applause-proc-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-syn-parse = "0.1.5"
parse = "0.1.2"
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full", "clone-impls", "extra-traits"] }

[lib]
proc-macro = true
name = "applause_proc_macros"
path = "lib.rs"

